Fixing issue with overflowing because of transform scale animations

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,13 +26,11 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
 body {
   background-color: var(--background);
-  overflow-x: hidden;
 }
 
 *,
